package domain.entity

/**
 * 画像ID
 * @param value 画像IDの値
 */

case class PictureId(value: Long)
