package domain.entity

/**
 * 投稿者のTwitter ID
 *
 * @param value Twitter IDの値
 */

case class TwitterId(value: Long)
